Simplify/remove dead code from domain model handling; refactoring for efficiency
- Inroduce `removeFirstIf` to BaseCollection to replicate old double-search logic, simpler to `remove` (`removeIf` in parent removes all and checks all entries of list)
- Avoid double lookups/searches of arrays where possible; using more standard approaches.
- Removes unused functionality from model interfaces where possible
- Incrementally reduce TestOnly capabilities; while marking more of them for improved discovery