@@ -55,7 +55,7 @@ public class RunIfConfigsTest {
         configs.add(config);
         configs.addError("key", "some error");
         assertThat(configs.errors().firstErrorOn("key")).isEqualTo("some error");
-        assertThat(configs.get(0).errors().firstErrorOn("status")).isEqualTo("some error");
+        assertThat(configs.getFirst().errors().firstErrorOn("status")).isEqualTo("some error");
     }
 
 }
