@@ -28,10 +28,10 @@ public class TabsTest {
     public void shouldSetAttributedOfTabs() {
         Tabs tabs = new Tabs();
         tabs.setConfigAttributes(List.of(Map.of(Tab.NAME, "tab1", Tab.PATH, "path1"), Map.of(Tab.NAME, "tab2", Tab.PATH, "path2")));
-        assertThat(tabs.get(0).getName()).isEqualTo("tab1");
-        assertThat(tabs.get(0).getPath()).isEqualTo("path1");
-        assertThat(tabs.get(1).getName()).isEqualTo("tab2");
-        assertThat(tabs.get(1).getPath()).isEqualTo("path2");
+        assertThat(tabs.getFirst().getName()).isEqualTo("tab1");
+        assertThat(tabs.getFirst().getPath()).isEqualTo("path1");
+        assertThat(tabs.getLast().getName()).isEqualTo("tab2");
+        assertThat(tabs.getLast().getPath()).isEqualTo("path2");
     }
 
     @Test
@@ -40,8 +40,8 @@ public class TabsTest {
         tabs.add(new Tab("tab1", "path1"));
         tabs.add(new Tab("tab1", "path2"));
         tabs.validate(null);
-        assertThat(tabs.get(0).errors().firstErrorOn(Tab.NAME)).isEqualTo("Tab name 'tab1' is not unique.");
-        assertThat(tabs.get(1).errors().firstErrorOn(Tab.NAME)).isEqualTo("Tab name 'tab1' is not unique.");
+        assertThat(tabs.getFirst().errors().firstErrorOn(Tab.NAME)).isEqualTo("Tab name 'tab1' is not unique.");
+        assertThat(tabs.getLast().errors().firstErrorOn(Tab.NAME)).isEqualTo("Tab name 'tab1' is not unique.");
     }
 
     @Test
