@@ -29,16 +29,6 @@ import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.*;
 
 public class TasksTest {
-
-    @Test
-    public void shouldReturnEmptyTasks() {
-        AntTask antTask1 = new AntTask();
-        FetchTask fetchArtifact = new FetchTask();
-        Tasks tasks = new Tasks(antTask1, fetchArtifact);
-        Tasks finds = tasks.findByType(NantTask.class);
-        assertThat(finds.size()).isEqualTo(0);
-    }
-
     @Test
     public void shouldSetConfigAttributesForBuiltinTask() {
         Map<String, Object> attributes = new HashMap<>();
@@ -52,7 +42,7 @@ public class TasksTest {
         spy.setConfigAttributes(attributes, taskFactory);
 
         assertThat(spy.size()).isEqualTo(1);
-        assertThat(spy.get(0)).isEqualTo(antTask("build.xml", "test", "foo"));
+        assertThat(spy.getFirst()).isEqualTo(antTask("build.xml", "test", "foo"));
     }
 
     @Test
@@ -116,8 +106,8 @@ public class TasksTest {
         Tasks tasks = new Tasks(antTask, execTask);
         String pipelineName = "p1";
         PipelineConfig pipelineConfig = GoConfigMother.configWithPipelines(pipelineName).pipelineConfigByName(new CaseInsensitiveString(pipelineName));
-        StageConfig stageConfig = pipelineConfig.getStages().get(0);
-        JobConfig jobConfig = stageConfig.getJobs().get(0);
+        StageConfig stageConfig = pipelineConfig.getStages().getFirst();
+        JobConfig jobConfig = stageConfig.getJobs().getFirst();
         jobConfig.setTasks(tasks);
 
         PipelineConfigSaveValidationContext context = PipelineConfigSaveValidationContext.forChain(true, "group", pipelineConfig, stageConfig, jobConfig);
