@@ -132,7 +132,7 @@ public class MagicalGoConfigXmlLoaderTest {
         assertThat(pipelineConfig1.size()).isEqualTo(2);
         assertThat(pipelineConfig1.getLabelTemplate()).isEqualTo(PipelineLabel.COUNT_TEMPLATE);
 
-        StageConfig stage1 = pipelineConfig1.get(0);
+        StageConfig stage1 = pipelineConfig1.getFirst();
         assertThat(stage1.name()).isEqualTo(new CaseInsensitiveString("stage1"));
         assertThat(stage1.allBuildPlans().size()).isEqualTo(1);
         assertThat(stage1.requiresApproval()).as("Should require approval").isTrue();
@@ -148,27 +148,27 @@ public class MagicalGoConfigXmlLoaderTest {
         assertThat(plan.name()).isEqualTo(new CaseInsensitiveString("plan1"));
         assertThat(plan.resourceConfigs().resourceNames()).contains("tiger", "lion");
         assertThat(plan.getTabs().size()).isEqualTo(2);
-        assertThat(plan.getTabs().getFirstOrNull().getName()).isEqualTo("Emma");
-        assertThat(plan.getTabs().getFirstOrNull().getPath()).isEqualTo("logs/emma/index.html");
+        assertThat(plan.getTabs().getFirst().getName()).isEqualTo("Emma");
+        assertThat(plan.getTabs().getFirst().getPath()).isEqualTo("logs/emma/index.html");
         assertThat(pipelineConfig1.materialConfigs().size()).isEqualTo(1);
-        shouldBeSvnMaterial(pipelineConfig1.materialConfigs().getFirstOrNull());
+        shouldBeSvnMaterial(pipelineConfig1.materialConfigs().getFirst());
 
         PipelineConfig pipelineConfig2 = cruiseConfig.pipelineConfigByName(new CaseInsensitiveString("pipeline2"));
-        shouldBeHgMaterial(pipelineConfig2.materialConfigs().getFirstOrNull());
+        shouldBeHgMaterial(pipelineConfig2.materialConfigs().getFirst());
 
         PipelineConfig pipelineConfig3 = cruiseConfig.pipelineConfigByName(new CaseInsensitiveString("pipeline3"));
-        MaterialConfig p4Material = pipelineConfig3.materialConfigs().getFirstOrNull();
+        MaterialConfig p4Material = pipelineConfig3.materialConfigs().getFirst();
         shouldBeP4Material(p4Material);
 
         PipelineConfig pipelineConfig4 = cruiseConfig.pipelineConfigByName(new CaseInsensitiveString("pipeline4"));
-        shouldBeGitMaterial(pipelineConfig4.materialConfigs().getFirstOrNull());
+        shouldBeGitMaterial(pipelineConfig4.materialConfigs().getFirst());
     }
 
     @Test
     void shouldLoadConfigWithConfigRepo() throws Exception {
         CruiseConfig cruiseConfig = xmlLoader.loadConfigHolder(ONE_CONFIG_REPO).config;
         assertThat(cruiseConfig.getConfigRepos().size()).isEqualTo(1);
-        ConfigRepoConfig configRepo = cruiseConfig.getConfigRepos().get(0);
+        ConfigRepoConfig configRepo = cruiseConfig.getConfigRepos().getFirst();
         assertThat(configRepo.getRepo()).isEqualTo(git("https://github.com/tomzo/gocd-indep-config-part.git"));
     }
 
@@ -184,7 +184,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 """
         )).config;
         assertThat(cruiseConfig.getConfigRepos().size()).isEqualTo(1);
-        ConfigRepoConfig configRepo = cruiseConfig.getConfigRepos().get(0);
+        ConfigRepoConfig configRepo = cruiseConfig.getConfigRepos().getFirst();
         assertThat(configRepo.getPluginId()).isEqualTo("myplugin");
     }
 
@@ -203,7 +203,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 """
         )).config;
         assertThat(cruiseConfig.getConfigRepos().size()).isEqualTo(2);
-        ConfigRepoConfig configRepo1 = cruiseConfig.getConfigRepos().get(0);
+        ConfigRepoConfig configRepo1 = cruiseConfig.getConfigRepos().getFirst();
         assertThat(configRepo1.getRepo()).isEqualTo(git("https://github.com/tomzo/gocd-indep-config-part.git"));
         ConfigRepoConfig configRepo2 = cruiseConfig.getConfigRepos().get(1);
         assertThat(configRepo2.getRepo()).isEqualTo(git("https://github.com/tomzo/gocd-refmain-config-part.git"));
@@ -227,7 +227,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 """
         )).config;
         assertThat(cruiseConfig.getConfigRepos().size()).isEqualTo(1);
-        ConfigRepoConfig configRepo = cruiseConfig.getConfigRepos().get(0);
+        ConfigRepoConfig configRepo = cruiseConfig.getConfigRepos().getFirst();
 
         assertThat(configRepo.getConfiguration().size()).isEqualTo(1);
         assertThat(configRepo.getConfiguration().getProperty("pattern").getValue()).isEqualTo("*.gocd.xml");
@@ -299,7 +299,7 @@ public class MagicalGoConfigXmlLoaderTest {
                   </environment>
                 </environments>""", CONFIG_SCHEMA_VERSION);
         EnvironmentsConfig environmentsConfig = xmlLoader.deserializeConfig(content).getEnvironments();
-        EnvironmentConfig uat = environmentsConfig.get(0);
+        EnvironmentConfig uat = environmentsConfig.getFirst();
         assertThat(uat.getOrigin()).isEqualTo(new FileConfigOrigin());
     }
 
@@ -309,12 +309,12 @@ public class MagicalGoConfigXmlLoaderTest {
         JobConfig plan = cruiseConfig.jobConfigByName("pipeline1", "mingle", "cardlist", true);
 
         assertThat(plan.tasks()).hasSize(1);
-        AntTask builder = (AntTask) plan.tasks().getFirstOrNull();
+        AntTask builder = (AntTask) plan.tasks().getFirst();
         assertThat(builder.getTarget()).isEqualTo("all");
         final ArtifactTypeConfigs cardListArtifacts = cruiseConfig.jobConfigByName("pipeline1", "mingle",
             "cardlist", true).artifactTypeConfigs();
         assertThat(cardListArtifacts.size()).isEqualTo(1);
-        ArtifactTypeConfig artifactConfigPlan = cardListArtifacts.get(0);
+        ArtifactTypeConfig artifactConfigPlan = cardListArtifacts.getFirst();
         assertThat(artifactConfigPlan.getArtifactType()).isEqualTo(ArtifactType.test);
     }
 
@@ -352,7 +352,7 @@ public class MagicalGoConfigXmlLoaderTest {
     void shouldRetainArtifactSourceThatIsNotWhitespace() throws Exception {
         CruiseConfig cruiseConfig = xmlLoader.deserializeConfig(goConfigMigration.upgradeIfNecessary(configWithArtifactSourceAs("t ")));
         JobConfig plan = cruiseConfig.jobConfigByName("pipeline", "stage", "job", true);
-        assertThat(plan.artifactTypeConfigs().getBuiltInArtifactConfigs().get(0).getSource()).isEqualTo("t ");
+        assertThat(plan.artifactTypeConfigs().getBuiltInArtifactConfigs().getFirst().getSource()).isEqualTo("t ");
     }
 
     @Test
@@ -499,10 +499,10 @@ public class MagicalGoConfigXmlLoaderTest {
                 </jobs>""";
 
         JobConfigs jobs = xmlLoader.fromXmlPartial(buildXmlPartial, JobConfigs.class);
-        JobConfig job = jobs.getFirstOrNull();
+        JobConfig job = jobs.getFirst();
         Tasks fetch = job.tasks();
         assertThat(fetch.size()).isEqualTo(1);
-        FetchTask task = (FetchTask) fetch.getFirstOrNull();
+        FetchTask task = (FetchTask) fetch.getFirst();
         assertThat(task.getStage()).isEqualTo(new CaseInsensitiveString("dev"));
         assertThat(task.getJob().toString()).isEqualTo("unit");
         assertThat(task.getSrc()).isEqualTo("dist");
@@ -524,10 +524,10 @@ public class MagicalGoConfigXmlLoaderTest {
                 </jobs>""";
 
         JobConfigs jobs = xmlLoader.fromXmlPartial(buildXmlPartial, JobConfigs.class);
-        JobConfig job = jobs.getFirstOrNull();
+        JobConfig job = jobs.getFirst();
         Tasks tasks = job.tasks();
         assertThat(tasks.size()).isEqualTo(1);
-        ExecTask execTask = (ExecTask) tasks.get(0);
+        ExecTask execTask = (ExecTask) tasks.getFirst();
         assertThat(execTask.cancelTask()).isInstanceOf(NullTask.class);
     }
 
@@ -672,7 +672,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 """).formatted(CONFIG_SCHEMA_VERSION);
         PartialConfig partialConfig = xmlLoader.fromXmlPartial(partialConfigWithPipeline, PartialConfig.class);
         assertThat(partialConfig.getGroups().size()).isEqualTo(1);
-        PipelineConfig pipeline = partialConfig.getGroups().get(0).getPipelines().get(0);
+        PipelineConfig pipeline = partialConfig.getGroups().getFirst().getPipelines().getFirst();
         assertThat(pipeline.name()).isEqualTo(new CaseInsensitiveString("pipeline"));
         assertThat(pipeline.size()).isEqualTo(1);
         assertThat(pipeline.findBy(new CaseInsensitiveString("mingle")).jobConfigByInstanceName("functional", true)).isNotNull();
@@ -693,8 +693,8 @@ public class MagicalGoConfigXmlLoaderTest {
         PartialConfig partialConfig = xmlLoader.fromXmlPartial(partialConfigWithPipeline, PartialConfig.class);
         EnvironmentsConfig environmentsConfig = partialConfig.getEnvironments();
         assertThat(environmentsConfig.size()).isEqualTo(2);
-        assertThat(environmentsConfig.get(0).containsPipeline(new CaseInsensitiveString("pipeline1"))).isTrue();
-        assertThat(environmentsConfig.get(1).getPipelines().size()).isEqualTo(0);
+        assertThat(environmentsConfig.getFirst().containsPipeline(new CaseInsensitiveString("pipeline1"))).isTrue();
+        assertThat(environmentsConfig.getLast().getPipelines().size()).isEqualTo(0);
     }
 
     @Test
@@ -743,8 +743,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 """).formatted(LOCK_VALUE_LOCK_ON_FAILURE);
         PipelineConfig pipeline = xmlLoader.fromXmlPartial(pipelineXmlPartial, PipelineConfig.class);
 
-        assertThat(pipeline.hasExplicitLock()).isTrue();
-        assertThat(pipeline.explicitLock()).isTrue();
+        assertThat(pipeline.hasExplicitLockBehavior()).isTrue();
+        assertThat(pipeline.isLockable()).isTrue();
     }
 
     @Test
@@ -768,8 +768,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 """).formatted(PipelineConfig.LOCK_VALUE_NONE);
         PipelineConfig pipeline = xmlLoader.fromXmlPartial(pipelineXmlPartial, PipelineConfig.class);
 
-        assertThat(pipeline.hasExplicitLock()).isTrue();
-        assertThat(pipeline.explicitLock()).isFalse();
+        assertThat(pipeline.hasExplicitLockBehavior()).isTrue();
+        assertThat(pipeline.isLockable()).isFalse();
     }
 
     @Test
@@ -793,10 +793,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 """;
         PipelineConfig pipeline = xmlLoader.fromXmlPartial(pipelineXmlPartial, PipelineConfig.class);
 
-        assertThat(pipeline.hasExplicitLock()).isFalse();
-        assertThatThrownBy(pipeline::explicitLock)
-            .as("Should throw exception if call explicit lock without first checking to see if there is one")
-            .hasMessageContaining("There is no explicit lock on the pipeline 'pipeline'.");
+        assertThat(pipeline.hasExplicitLockBehavior()).isFalse();
+        assertThat(pipeline.isLockable()).isFalse();
     }
 
     @Test
@@ -822,7 +820,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 """;
         PipelineConfig pipeline = xmlLoader.fromXmlPartial(pipelineWithP4MaterialXmlPartial, PipelineConfig.class);
         assertThat(pipeline.name()).isEqualTo(new CaseInsensitiveString("pipeline"));
-        MaterialConfig material = pipeline.materialConfigs().getFirstOrNull();
+        MaterialConfig material = pipeline.materialConfigs().getFirst();
         assertThat(material).isInstanceOf(P4MaterialConfig.class);
         assertThat(((P4MaterialConfig) material).getUseTickets()).isTrue();
     }
@@ -933,7 +931,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 """;
         String configWithCommand = withCommand(jobWithCommand);
         CruiseConfig cruiseConfig = xmlLoader.deserializeConfig(configWithCommand);
-        Task task = cruiseConfig.pipelineConfigByName(new CaseInsensitiveString("pipeline1")).getFirstOrNull().allBuildPlans().getFirstOrNull().tasks().getFirstOrNull();
+        Task task = cruiseConfig.pipelineConfigByName(new CaseInsensitiveString("pipeline1")).getFirst().allBuildPlans().getFirst().tasks().getFirst();
 
         assertThat(task).isInstanceOf(ExecTask.class);
         assertThat(task).isEqualTo(new ExecTask("c:\\program files\\cmd.exe", "arguments", (String) null));
@@ -1038,7 +1036,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 """;
         PipelineConfig pipeline = xmlLoader.fromXmlPartial(pipelineXmlPartial, PipelineConfig.class);
         assertThat(pipeline.materialConfigs().size()).isEqualTo(3);
-        ScmMaterialConfig material = (ScmMaterialConfig) pipeline.materialConfigs().get(0);
+        ScmMaterialConfig material = (ScmMaterialConfig) pipeline.materialConfigs().getFirst();
         assertThat(material.getFolder()).isEqualTo("folder1");
     }
 
@@ -1211,8 +1209,8 @@ public class MagicalGoConfigXmlLoaderTest {
     @Test
     void shouldLoadPipelinesWithGroupName() throws Exception {
         CruiseConfig config = xmlLoader.deserializeConfig(PIPELINE_GROUPS);
-        assertThat(config.getGroups().getFirstOrNull().getGroup()).isEqualTo("studios");
-        assertThat(config.getGroups().get(1).getGroup()).isEqualTo("perfessionalservice");
+        assertThat(config.getGroups().getFirst().getGroup()).isEqualTo("studios");
+        assertThat(config.getGroups().getLast().getGroup()).isEqualTo("perfessionalservice");
     }
 
     @Test
@@ -1221,7 +1219,7 @@ public class MagicalGoConfigXmlLoaderTest {
         JobConfig job = config.jobConfigByName("pipeline1", "mingle", "cardlist", true);
 
         assertThat(job.tasks().size()).isEqualTo(2);
-        assertThat(job.tasks().findFirstByType(AntTask.class).getConditions().get(0)).isEqualTo(new RunIfConfig("failed"));
+        assertThat(job.tasks().findFirstByType(AntTask.class).getConditions().getFirst()).isEqualTo(new RunIfConfig("failed"));
 
         RunIfConfigs conditions = job.tasks().findFirstByType(NantTask.class).getConditions();
         assertThat(conditions.get(0)).isEqualTo(new RunIfConfig("failed"));
@@ -1274,8 +1272,8 @@ public class MagicalGoConfigXmlLoaderTest {
     void shouldLoadMaterialNameIfPresent() throws Exception {
         CruiseConfig config = xmlLoader.deserializeConfig(MATERIAL_WITH_NAME);
         MaterialConfigs materialConfigs = config.pipelineConfigByName(new CaseInsensitiveString("pipeline")).materialConfigs();
-        assertThat(materialConfigs.get(0).getName()).isEqualTo(new CaseInsensitiveString("svn"));
-        assertThat(materialConfigs.get(1).getName()).isEqualTo(new CaseInsensitiveString("hg"));
+        assertThat(materialConfigs.getFirst().getName()).isEqualTo(new CaseInsensitiveString("svn"));
+        assertThat(materialConfigs.getLast().getName()).isEqualTo(new CaseInsensitiveString("hg"));
     }
 
     @Test
@@ -1606,8 +1604,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 </templates>""");
         TemplatesConfig templates = ConfigMigrator.loadWithMigration(content).config.getTemplates();
         assertThat(templates.size()).isEqualTo(1);
-        assertThat(templates.get(0).size()).isEqualTo(1);
-        assertThat(templates.get(0).get(0)).isEqualTo(StageConfigMother.custom("stage1", "job1"));
+        assertThat(templates.getFirst().size()).isEqualTo(1);
+        assertThat(templates.getFirst().getFirst()).isEqualTo(StageConfigMother.custom("stage1", "job1"));
     }
 
     @Test
@@ -1632,8 +1630,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 </templates>""");
         TemplatesConfig templates = ConfigMigrator.loadWithMigration(content).config.getTemplates();
         assertThat(templates.size()).isEqualTo(2);
-        assertThat(templates.get(0).name()).isEqualTo(new CaseInsensitiveString("erbshe"));
-        assertThat(templates.get(1).name()).isEqualTo(new CaseInsensitiveString("erbshe2"));
+        assertThat(templates.getFirst().name()).isEqualTo(new CaseInsensitiveString("erbshe"));
+        assertThat(templates.getLast().name()).isEqualTo(new CaseInsensitiveString("erbshe2"));
     }
 
 
@@ -1974,7 +1972,7 @@ public class MagicalGoConfigXmlLoaderTest {
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
         EnvironmentConfig element = new BasicEnvironmentConfig(new CaseInsensitiveString("uat"));
         element.addEnvironmentVariable("cdata", multiLinedata);
-        assertThat(config.getEnvironments().get(0)).isEqualTo(element);
+        assertThat(config.getEnvironments().getFirst()).isEqualTo(element);
     }
 
     @Test
@@ -2346,12 +2344,12 @@ public class MagicalGoConfigXmlLoaderTest {
                 </pipeline>""", encryptedPassword), CONFIG_SCHEMA_VERSION);
         GoConfigHolder configHolder = ConfigMigrator.loadWithMigration(content);
         CruiseConfig cruiseConfig = configHolder.config;
-        SvnMaterialConfig svnMaterialConfig = (SvnMaterialConfig) cruiseConfig.pipelineConfigByName(new CaseInsensitiveString("pipeline1")).materialConfigs().get(0);
+        SvnMaterialConfig svnMaterialConfig = (SvnMaterialConfig) cruiseConfig.pipelineConfigByName(new CaseInsensitiveString("pipeline1")).materialConfigs().getFirst();
         assertThat(svnMaterialConfig.getEncryptedPassword()).isEqualTo(encryptedPassword);
         assertThat(svnMaterialConfig.getPassword()).isEqualTo(password);
 
         CruiseConfig configForEdit = configHolder.configForEdit;
-        svnMaterialConfig = (SvnMaterialConfig) configForEdit.pipelineConfigByName(new CaseInsensitiveString("pipeline1")).materialConfigs().get(0);
+        svnMaterialConfig = (SvnMaterialConfig) configForEdit.pipelineConfigByName(new CaseInsensitiveString("pipeline1")).materialConfigs().getFirst();
         assertThat(svnMaterialConfig.getEncryptedPassword()).isEqualTo(encryptedPassword);
         assertThat(svnMaterialConfig.getPassword()).isEqualTo("abc");
         assertThat(ReflectionUtil.<String>getField(svnMaterialConfig, "password")).isNull();
@@ -2519,7 +2517,7 @@ public class MagicalGoConfigXmlLoaderTest {
         GoConfigHolder goConfigHolder = ConfigMigrator.loadWithMigration(content);
         MaterialConfigs materialConfigs = goConfigHolder.config.pipelineConfigByName(new CaseInsensitiveString("some_pipeline")).materialConfigs();
         assertThat(materialConfigs.size()).isEqualTo(1);
-        TfsMaterialConfig materialConfig = (TfsMaterialConfig) materialConfigs.get(0);
+        TfsMaterialConfig materialConfig = (TfsMaterialConfig) materialConfigs.getFirst();
         assertThat(materialConfig).isEqualTo(tfs(new GoCipher(), UrlArgument.create("tfsurl"), "foo", "", "bar", "project-path"));
     }
 
@@ -2546,7 +2544,7 @@ public class MagicalGoConfigXmlLoaderTest {
         PipelineConfig pipelineConfig = config.pipelineConfigByName(new CaseInsensitiveString("some_pipeline"));
         EnvironmentVariablesConfig variables = pipelineConfig.getVariables();
         assertThat(variables.size()).isEqualTo(1);
-        EnvironmentVariableConfig environmentVariableConfig = variables.get(0);
+        EnvironmentVariableConfig environmentVariableConfig = variables.getFirst();
         assertThat(environmentVariableConfig.getEncryptedValue()).isEqualTo(cipherText);
         assertThat(environmentVariableConfig.isSecure()).isTrue();
     }
@@ -2573,7 +2571,7 @@ public class MagicalGoConfigXmlLoaderTest {
         PipelineConfig pipelineConfig = config.pipelineConfigByName(new CaseInsensitiveString("some_pipeline"));
         EnvironmentVariablesConfig variables = pipelineConfig.getVariables();
         assertThat(variables.size()).isEqualTo(1);
-        EnvironmentVariableConfig environmentVariableConfig = variables.get(0);
+        EnvironmentVariableConfig environmentVariableConfig = variables.getFirst();
         assertThat(environmentVariableConfig.getName()).isEqualTo("var_name");
         assertThat(environmentVariableConfig.getValue().isEmpty()).isTrue();
     }
@@ -2602,7 +2600,7 @@ public class MagicalGoConfigXmlLoaderTest {
         PipelineConfig pipelineConfig = config.pipelineConfigByName(new CaseInsensitiveString("some_pipeline"));
         EnvironmentVariablesConfig variables = pipelineConfig.getVariables();
         assertThat(variables.size()).isEqualTo(1);
-        EnvironmentVariableConfig environmentVariableConfig = variables.get(0);
+        EnvironmentVariableConfig environmentVariableConfig = variables.getFirst();
         assertThat(environmentVariableConfig.getEncryptedValue()).isEqualTo(encryptedValue);
         assertThat(environmentVariableConfig.isSecure()).isTrue();
     }
@@ -2646,7 +2644,7 @@ public class MagicalGoConfigXmlLoaderTest {
 
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
         PipelineConfig pipeline = config.pipelineConfigByName(new CaseInsensitiveString("some_pipeline"));
-        TfsMaterialConfig material = (TfsMaterialConfig) pipeline.materialConfigs().get(0);
+        TfsMaterialConfig material = (TfsMaterialConfig) pipeline.materialConfigs().getFirst();
         assertThat(material.getUserName()).isEqualTo("username");
         assertThat(material.getDomain()).isEqualTo("domain");
     }
@@ -2704,7 +2702,7 @@ public class MagicalGoConfigXmlLoaderTest {
                 </pipeline>""", CONFIG_SCHEMA_VERSION);
 
         GoConfigHolder holder = ConfigMigrator.loadWithMigration(content);
-        assertThat(holder.config.pipelineConfigByName(new CaseInsensitiveString("downest_pipeline")).getFetchTasks().get(0)).isEqualTo(new FetchTask(new CaseInsensitiveString("uppest_pipeline/up_pipeline/down_pipeline"), new CaseInsensitiveString("uppest_stage"), new CaseInsensitiveString("uppest_job"), "src", "dest"));
+        assertThat(holder.config.pipelineConfigByName(new CaseInsensitiveString("downest_pipeline")).getFetchTasks().getFirst()).isEqualTo(new FetchTask(new CaseInsensitiveString("uppest_pipeline/up_pipeline/down_pipeline"), new CaseInsensitiveString("uppest_stage"), new CaseInsensitiveString("uppest_job"), "src", "dest"));
     }
 
     @Test
@@ -2774,11 +2772,11 @@ public class MagicalGoConfigXmlLoaderTest {
         PipelineConfig pipeline = pipelineConfigs.findBy(new CaseInsensitiveString("new_name"));
         assertThat(pipeline).isNotNull();
         assertThat(pipeline.materialConfigs().size()).isEqualTo(1);
-        MaterialConfig material = pipeline.materialConfigs().get(0);
+        MaterialConfig material = pipeline.materialConfigs().getFirst();
         assertThat(material).isInstanceOf(SvnMaterialConfig.class);
         assertThat(material.getUriForDisplay()).isEqualTo("file:///tmp/foo");
         assertThat(pipeline.size()).isEqualTo(1);
-        assertThat(pipeline.get(0).getJobs().size()).isEqualTo(1);
+        assertThat(pipeline.getFirst().getJobs().size()).isEqualTo(1);
     }
 
     @Test
@@ -2837,9 +2835,9 @@ public class MagicalGoConfigXmlLoaderTest {
             </pipelines></cruise>""").formatted(CONFIG_SCHEMA_VERSION);
 
         GoConfigHolder goConfigHolder = xmlLoader.loadConfigHolder(xml);
-        PackageDefinition packageDefinition = goConfigHolder.config.getPackageRepositories().getFirstOrNull().getPackages().getFirstOrNull();
+        PackageDefinition packageDefinition = goConfigHolder.config.getPackageRepositories().getFirst().getPackages().getFirst();
         PipelineConfig pipelineConfig = goConfigHolder.config.pipelineConfigByName(new CaseInsensitiveString("new_name"));
-        PackageMaterialConfig packageMaterialConfig = (PackageMaterialConfig) pipelineConfig.materialConfigs().get(0);
+        PackageMaterialConfig packageMaterialConfig = (PackageMaterialConfig) pipelineConfig.materialConfigs().getFirst();
         assertThat(packageMaterialConfig.getPackageDefinition()).isEqualTo(packageDefinition);
     }
 
@@ -2913,9 +2911,9 @@ public class MagicalGoConfigXmlLoaderTest {
         RepositoryMetadataStore.getInstance().addMetadataFor("plugin-id", packageConfigurations);
 
         GoConfigHolder goConfigHolder = xmlLoader.loadConfigHolder(xml);
-        PackageDefinition packageDefinition = goConfigHolder.config.getPackageRepositories().getFirstOrNull().getPackages().getFirstOrNull();
+        PackageDefinition packageDefinition = goConfigHolder.config.getPackageRepositories().getFirst().getPackages().getFirst();
         PipelineConfig pipelineConfig = goConfigHolder.config.pipelineConfigByName(new CaseInsensitiveString("new_name"));
-        PackageMaterialConfig packageMaterialConfig = (PackageMaterialConfig) pipelineConfig.materialConfigs().get(0);
+        PackageMaterialConfig packageMaterialConfig = (PackageMaterialConfig) pipelineConfig.materialConfigs().getFirst();
         assertThat(packageMaterialConfig.getPackageDefinition()).isEqualTo(packageDefinition);
         Configuration repoConfig = packageMaterialConfig.getPackageDefinition().getRepository().getConfiguration();
         assertThat(repoConfig.get(0).getConfigurationValue().getValue()).isEqualTo("value");
@@ -2954,8 +2952,8 @@ public class MagicalGoConfigXmlLoaderTest {
               </repositories></cruise>""").formatted(CONFIG_SCHEMA_VERSION);
 
         GoConfigHolder goConfigHolder = xmlLoader.loadConfigHolder(xml);
-        PackageRepository packageRepository = goConfigHolder.config.getPackageRepositories().getFirstOrNull();
-        PackageDefinition packageDefinition = packageRepository.getPackages().getFirstOrNull();
+        PackageRepository packageRepository = goConfigHolder.config.getPackageRepositories().getFirst();
+        PackageDefinition packageDefinition = packageRepository.getPackages().getFirst();
         assertThat(packageDefinition.getRepository()).isEqualTo(packageRepository);
     }
 
@@ -3120,8 +3118,8 @@ public class MagicalGoConfigXmlLoaderTest {
         String xml = "<cruise schemaVersion='" + CONFIG_SCHEMA_VERSION + "'><repositories>\n" + withPackages(REPO_WITH_MISSING_ID,
             PACKAGE_WITH_MISSING_ID) + " </repositories></cruise>";
         GoConfigHolder configHolder = xmlLoader.loadConfigHolder(xml);
-        assertThat(configHolder.config.getPackageRepositories().get(0).getId()).isNotNull();
-        assertThat(configHolder.config.getPackageRepositories().get(0).getPackages().get(0).getId()).isNotNull();
+        assertThat(configHolder.config.getPackageRepositories().getFirst().getId()).isNotNull();
+        assertThat(configHolder.config.getPackageRepositories().getFirst().getPackages().getFirst().getId()).isNotNull();
     }
 
     @Test
@@ -3186,13 +3184,13 @@ public class MagicalGoConfigXmlLoaderTest {
             </cruise>""").formatted(CONFIG_SCHEMA_VERSION);
         String configContent = String.format(configTemplate, false);
         GoConfigHolder holder = xmlLoader.loadConfigHolder(configContent);
-        PackageRepository packageRepository = holder.config.getPackageRepositories().find("2ef830d7-dd66-42d6-b393-64a84646e557");
+        PackageRepository packageRepository = holder.config.getPackageRepositories().findByRepoId("2ef830d7-dd66-42d6-b393-64a84646e557");
         PackageDefinition aPackage = packageRepository.findPackage("88a3beca-cbe2-4c4d-9744-aa0cda3f371c");
         assertThat(aPackage.isAutoUpdate()).isFalse();
 
         configContent = String.format(configTemplate, true);
         holder = xmlLoader.loadConfigHolder(configContent);
-        packageRepository = holder.config.getPackageRepositories().find("2ef830d7-dd66-42d6-b393-64a84646e557");
+        packageRepository = holder.config.getPackageRepositories().findByRepoId("2ef830d7-dd66-42d6-b393-64a84646e557");
         aPackage = packageRepository.findPackage("88a3beca-cbe2-4c4d-9744-aa0cda3f371c");
         assertThat(aPackage.isAutoUpdate()).isTrue();
     }
@@ -3237,7 +3235,7 @@ public class MagicalGoConfigXmlLoaderTest {
               </pipeline>
             </pipelines></cruise>""").formatted(CONFIG_SCHEMA_VERSION);
         GoConfigHolder holder = ConfigMigrator.loadWithMigration(xml);
-        assertThat(holder.config.getAllPipelineConfigs().get(0).materialConfigs().get(0).getName().toString()).isEqualTo("repo_name_pkg_name");
+        assertThat(holder.config.getAllPipelineConfigs().getFirst().materialConfigs().getFirst().getName().toString()).isEqualTo("repo_name_pkg_name");
     }
 
     @Test
@@ -3295,12 +3293,12 @@ public class MagicalGoConfigXmlLoaderTest {
                 </cruise>""").formatted(CONFIG_SCHEMA_VERSION);
         CruiseConfig cruiseConfig = ConfigMigrator.loadWithMigration(configString).configForEdit;
 
-        PipelineConfig pipelineConfig = cruiseConfig.getAllPipelineConfigs().get(0);
-        JobConfig jobConfig = pipelineConfig.getFirstStageConfig().getJobs().get(0);
+        PipelineConfig pipelineConfig = cruiseConfig.getAllPipelineConfigs().getFirst();
+        JobConfig jobConfig = pipelineConfig.getFirstStageConfig().getJobs().getFirst();
         Tasks tasks = jobConfig.getTasks();
         assertThat(tasks.size()).isEqualTo(1);
-        assertThat(tasks.get(0) instanceof PluggableTask).isTrue();
-        PluggableTask task = (PluggableTask) tasks.get(0);
+        assertThat(tasks.getFirst() instanceof PluggableTask).isTrue();
+        PluggableTask task = (PluggableTask) tasks.getFirst();
         assertThat(task.getTaskType()).isEqualTo("pluggable_task_plugin_id_1");
         assertThat(task.getTypeForDisplay()).isEqualTo("Pluggable Task");
         final Configuration configuration = task.getConfiguration();
@@ -3368,7 +3366,7 @@ public class MagicalGoConfigXmlLoaderTest {
         GoConfigHolder goConfigHolder = xmlLoader.loadConfigHolder(configString);
 
         PipelineConfig pipelineConfig = goConfigHolder.config.pipelineConfigByName(new CaseInsensitiveString("pipeline1"));
-        PluggableTask task = (PluggableTask) pipelineConfig.getStage("mingle").getJobs().getJob(new CaseInsensitiveString("do-something")).getTasks().getFirstOrNull();
+        PluggableTask task = (PluggableTask) pipelineConfig.getStage("mingle").getJobs().getJob(new CaseInsensitiveString("do-something")).getTasks().getFirst();
 
         assertThat(task.getConfiguration().getProperty("username").isSecure()).isFalse();
         assertThat(task.getConfiguration().getProperty("password").isSecure()).isTrue();
@@ -3665,8 +3663,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 </pipeline>""").formatted(encryptedValueWithWhitespaceAndNewline), 88);
 
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
-        assertThat(config.allPipelines().get(0).getVariables().get(0).getValue()).isEqualTo(plainText);
-        assertThat(config.allPipelines().get(0).getVariables().get(0).getEncryptedValue()).startsWith("AES:");
+        assertThat(config.allPipelines().getFirst().getVariables().getFirst().getValue()).isEqualTo(plainText);
+        assertThat(config.allPipelines().getFirst().getVariables().getFirst().getEncryptedValue()).startsWith("AES:");
     }
 
     @Test
@@ -3695,9 +3693,9 @@ public class MagicalGoConfigXmlLoaderTest {
                     </scm>""").formatted(encryptedValueWithWhitespaceAndNewline), 88);
 
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
-        assertThat(config.getSCMs().get(0).getConfiguration().getProperty("secureKey").getValue()).isEqualTo(plainText);
-        assertThat(config.getSCMs().get(0).getConfiguration().getProperty("secureKey").getEncryptedValue()).startsWith("AES:");
-        assertThat(config.getSCMs().get(0).getConfiguration().getProperty("plainTextKey").getValue()).isEqualTo("https://url/some_path");
+        assertThat(config.getSCMs().getFirst().getConfiguration().getProperty("secureKey").getValue()).isEqualTo(plainText);
+        assertThat(config.getSCMs().getFirst().getConfiguration().getProperty("secureKey").getEncryptedValue()).startsWith("AES:");
+        assertThat(config.getSCMs().getFirst().getConfiguration().getProperty("plainTextKey").getValue()).isEqualTo("https://url/some_path");
     }
 
     @Test
@@ -3737,8 +3735,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 </pipeline>""").formatted(encryptedValueWithWhitespaceAndNewline, encryptedValueWithWhitespaceAndNewline, encryptedValueWithWhitespaceAndNewline), 88);
 
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
-        MaterialConfigs materialConfigs = config.allPipelines().get(0).materialConfigs();
-        SvnMaterialConfig svnMaterialConfig = (SvnMaterialConfig) materialConfigs.get(0);
+        MaterialConfigs materialConfigs = config.allPipelines().getFirst().materialConfigs();
+        SvnMaterialConfig svnMaterialConfig = (SvnMaterialConfig) materialConfigs.getFirst();
         assertThat(svnMaterialConfig.getPassword()).isEqualTo(plainText);
         assertThat(svnMaterialConfig.getEncryptedPassword()).startsWith("AES:");
         assertThat(svnMaterialConfig.getFilterAsString()).isEqualTo("**/*");
@@ -4119,8 +4117,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 </pipeline>""").formatted(desEncryptedPassword), 108);
 
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
-        assertThat(config.allPipelines().get(0).getVariables().get(0).getValue()).isEqualTo(clearText);
-        String encryptedValue = config.allPipelines().get(0).getVariables().get(0).getEncryptedValue();
+        assertThat(config.allPipelines().getFirst().getVariables().getFirst().getValue()).isEqualTo(clearText);
+        String encryptedValue = config.allPipelines().getFirst().getVariables().getFirst().getEncryptedValue();
         assertThat(encryptedValue).startsWith("AES:");
         assertThat(new AESEncrypter(new AESCipherProvider(systemEnvironment)).decrypt(encryptedValue)).isEqualTo("user-password!");
     }
@@ -4189,13 +4187,13 @@ public class MagicalGoConfigXmlLoaderTest {
                   </scm>""").formatted(desEncryptedPassword), 108);
 
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
-        assertThat(config.getSCMs().get(0).getConfiguration().getProperty("secureKey").getValue()).isEqualTo(clearText);
-        String encryptedValue = config.getSCMs().get(0).getConfiguration().getProperty("secureKey").getEncryptedValue();
+        assertThat(config.getSCMs().getFirst().getConfiguration().getProperty("secureKey").getValue()).isEqualTo(clearText);
+        String encryptedValue = config.getSCMs().getFirst().getConfiguration().getProperty("secureKey").getEncryptedValue();
 
         assertThat(encryptedValue).startsWith("AES:");
         assertThat(new AESEncrypter(new AESCipherProvider(systemEnvironment)).decrypt(encryptedValue)).isEqualTo("user-password!");
 
-        assertThat(config.getSCMs().get(0).getConfiguration().getProperty("plainTextKey").getValue()).isEqualTo("https://url/some_path");
+        assertThat(config.getSCMs().getFirst().getConfiguration().getProperty("plainTextKey").getValue()).isEqualTo("https://url/some_path");
     }
 
     @Test
@@ -4225,8 +4223,8 @@ public class MagicalGoConfigXmlLoaderTest {
                 </pipeline>""").formatted(desEncryptedPassword, desEncryptedPassword, desEncryptedPassword), 108);
 
         CruiseConfig config = ConfigMigrator.loadWithMigration(content).config;
-        MaterialConfigs materialConfigs = config.allPipelines().get(0).materialConfigs();
-        SvnMaterialConfig svnMaterialConfig = (SvnMaterialConfig) materialConfigs.get(0);
+        MaterialConfigs materialConfigs = config.allPipelines().getFirst().materialConfigs();
+        SvnMaterialConfig svnMaterialConfig = (SvnMaterialConfig) materialConfigs.getFirst();
         assertThat(svnMaterialConfig.getPassword()).isEqualTo(clearText);
         assertThat(svnMaterialConfig.getEncryptedPassword()).startsWith("AES:");
         TfsMaterialConfig tfs = (TfsMaterialConfig) materialConfigs.get(1);
@@ -4272,11 +4270,11 @@ public class MagicalGoConfigXmlLoaderTest {
         PipelineConfig parent = config.pipelineConfigByName(new CaseInsensitiveString("parent"));
         PipelineConfig child = config.pipelineConfigByName(new CaseInsensitiveString("child"));
 
-        Configuration ancestorPublishArtifactConfig = ancestor.get(0).getJobs().getFirstOrNull().artifactTypeConfigs().getPluggableArtifactConfigs().get(0).getConfiguration();
-        Configuration parentPublishArtifactConfig = parent.get(0).getJobs().getFirstOrNull().artifactTypeConfigs().getPluggableArtifactConfigs().get(0).getConfiguration();
-        Configuration childFetchArtifactFromAncestorConfig = ((FetchPluggableArtifactTask) child.get(0).getJobs().getFirstOrNull().tasks().get(0)).getConfiguration();
-        Configuration childFetchArtifactFromParentConfig = ((FetchPluggableArtifactTask) child.get(0).getJobs().getFirstOrNull().tasks().get(1)).getConfiguration();
-        ArtifactStore dockerhubStore = config.getArtifactStores().getFirstOrNull();
+        Configuration ancestorPublishArtifactConfig = ancestor.getFirst().getJobs().getFirst().artifactTypeConfigs().getPluggableArtifactConfigs().getFirst().getConfiguration();
+        Configuration parentPublishArtifactConfig = parent.getFirst().getJobs().getFirst().artifactTypeConfigs().getPluggableArtifactConfigs().getFirst().getConfiguration();
+        Configuration childFetchArtifactFromAncestorConfig = ((FetchPluggableArtifactTask) child.getFirst().getJobs().getFirst().tasks().getFirst()).getConfiguration();
+        Configuration childFetchArtifactFromParentConfig = ((FetchPluggableArtifactTask) child.getFirst().getJobs().getFirst().tasks().getLast()).getConfiguration();
+        ArtifactStore dockerhubStore = config.getArtifactStores().getFirst();
 
         assertConfigProperty(ancestorPublishArtifactConfig, "Image", "IMAGE_SECRET", true);
         assertConfigProperty(ancestorPublishArtifactConfig, "Tag", "ancestor_tag_${GO_PIPELINE_COUNTER}", false);
@@ -4335,7 +4333,7 @@ public class MagicalGoConfigXmlLoaderTest {
         SecretConfigs secretConfigs = config.getSecretConfigs();
         assertThat(secretConfigs.size()).isEqualTo(1);
 
-        SecretConfig secretConfig = secretConfigs.getFirstOrNull();
+        SecretConfig secretConfig = secretConfigs.getFirst();
         assertThat(secretConfig.getId()).isEqualTo("my_secret");
         assertThat(secretConfig.getPluginId()).isEqualTo("gocd_file_based_plugin");
         assertThat(secretConfig.getDescription()).isEqualTo("All secrets for env1");
@@ -4426,10 +4424,10 @@ public class MagicalGoConfigXmlLoaderTest {
 
         PipelineConfig pipelineConfig = config.getPipelineConfigByName(new CaseInsensitiveString("Test"));
         assertThat(pipelineConfig.materialConfigs()).hasSize(1);
-        assertThat(((HgMaterialConfig) pipelineConfig.materialConfigs().get(0)).getBranch()).isEqualTo("feature");
+        assertThat(((HgMaterialConfig) pipelineConfig.materialConfigs().getFirst()).getBranch()).isEqualTo("feature");
 
         assertThat(config.getConfigRepos()).hasSize(1);
-        assertThat(((HgMaterialConfig) config.getConfigRepos().get(0).getRepo()).getBranch()).isEqualTo("feature");
+        assertThat(((HgMaterialConfig) config.getConfigRepos().getFirst().getRepo()).getBranch()).isEqualTo("feature");
 
     }
 
@@ -4457,8 +4455,8 @@ public class MagicalGoConfigXmlLoaderTest {
 
         SecretConfig secretConfig = config.getSecretConfigs().find("example");
 
-        assertThat(secretConfig.getRules().getFirstOrNull().action()).isEqualTo("*");
-        assertThat(secretConfig.getRules().get(1).type()).isEqualTo("*");
+        assertThat(secretConfig.getRules().getFirst().action()).isEqualTo("*");
+        assertThat(secretConfig.getRules().getLast().type()).isEqualTo("*");
     }
 
     @Test
@@ -4542,7 +4540,7 @@ public class MagicalGoConfigXmlLoaderTest {
 
         MaterialConfig materialConfig = config
             .getPipelineConfigByName(new CaseInsensitiveString("pipeline"))
-            .materialConfigs().get(0);
+            .materialConfigs().getFirst();
 
         assertThat(materialConfig).isInstanceOf(PluggableSCMMaterialConfig.class);
         assertThat(materialConfig.isInvertFilter()).isTrue();
@@ -4577,7 +4575,7 @@ public class MagicalGoConfigXmlLoaderTest {
         JobConfigs configs = stage.allBuildPlans();
         ResourceConfig resourceConfig = new ResourceConfig();
         resourceConfig.setName(resourceName);
-        configs.get(0).resourceConfigs().add(resourceConfig);
+        configs.getFirst().resourceConfigs().add(resourceConfig);
         return stage;
     }
 }
