@@ -170,7 +170,7 @@ public class GitMaterialTest {
             GitMaterial branchedGit = new GitMaterial(branchedTestRepo.projectRepositoryUrl(), BRANCH);
             List<Modification> modifications = branchedGit.latestModification(randomDirectory(), new TestSubprocessExecutionContext());
             assertThat(modifications.size()).isEqualTo(1);
-            assertThat(modifications.get(0).getComment()).isEqualTo("Started foo branch");
+            assertThat(modifications.getFirst().getComment()).isEqualTo("Started foo branch");
         }
 
         @Test
@@ -206,10 +206,10 @@ public class GitMaterialTest {
         @Test
         void shouldRetrieveModifiedFiles() {
             List<Modification> mods = git.modificationsSince(workingDir, GitTestRepo.REVISION_0, new TestSubprocessExecutionContext());
-            List<ModifiedFile> mod1Files = mods.get(0).getModifiedFiles();
+            List<ModifiedFile> mod1Files = mods.getFirst().getModifiedFiles();
             assertThat(mod1Files.size()).isEqualTo(1);
-            assertThat(mod1Files.get(0).getFileName()).isEqualTo("build.xml");
-            assertThat(mod1Files.get(0).getAction()).isEqualTo(ModifiedAction.modified);
+            assertThat(mod1Files.getFirst().getFileName()).isEqualTo("build.xml");
+            assertThat(mod1Files.getFirst().getAction()).isEqualTo(ModifiedAction.modified);
         }
 
         @Test
@@ -387,8 +387,8 @@ public class GitMaterialTest {
 
     @Test
     void shouldBeEqualWhenUrlSameForHgMaterial() {
-        Material material = MaterialsMother.gitMaterials("url1").get(0);
-        Material anotherMaterial = MaterialsMother.gitMaterials("url1").get(0);
+        Material material = MaterialsMother.gitMaterials("url1").getFirst();
+        Material anotherMaterial = MaterialsMother.gitMaterials("url1").getFirst();
         assertThat(material.equals(anotherMaterial)).isTrue();
         assertThat(anotherMaterial.equals(material)).isTrue();
         assertThat(anotherMaterial.hashCode() == material.hashCode()).isTrue();
@@ -396,16 +396,16 @@ public class GitMaterialTest {
 
     @Test
     void shouldNotBeEqualWhenUrlDifferent() {
-        Material material1 = MaterialsMother.gitMaterials("url1").get(0);
-        Material material2 = MaterialsMother.gitMaterials("url2").get(0);
+        Material material1 = MaterialsMother.gitMaterials("url1").getFirst();
+        Material material2 = MaterialsMother.gitMaterials("url2").getFirst();
         assertThat(material1.equals(material2)).isFalse();
         assertThat(material2.equals(material1)).isFalse();
     }
 
     @Test
     void shouldNotBeEqualWhenTypeDifferent() {
-        Material material = MaterialsMother.gitMaterials("url1").get(0);
-        final Material hgMaterial = MaterialsMother.hgMaterials("url1", "hgdir").get(0);
+        Material material = MaterialsMother.gitMaterials("url1").getFirst();
+        final Material hgMaterial = MaterialsMother.hgMaterials("url1", "hgdir").getFirst();
         assertThat(material.equals(hgMaterial)).isFalse();
         assertThat(hgMaterial.equals(material)).isFalse();
     }
@@ -481,10 +481,10 @@ public class GitMaterialTest {
         MaterialRevision materialRevision = materialRevisions.getMaterialRevision(0);
         materialRevision.updateTo(agentWorkingDir, inMemoryConsumer(), new TestSubprocessExecutionContext());
 
-        File localFile = submoduleRepos.files(GitRepoContainingSubmodule.NAME).get(0);
+        File localFile = submoduleRepos.files(GitRepoContainingSubmodule.NAME).getFirst();
         assertThat(new File(agentWorkingDir, localFile.getName())).exists();
 
-        File file = submoduleRepos.files(SUBMODULE).get(0);
+        File file = submoduleRepos.files(SUBMODULE).getFirst();
         File workingSubmoduleFolder = new File(agentWorkingDir, "sub1");
         assertThat(new File(workingSubmoduleFolder, file.getName())).exists();
     }
@@ -504,7 +504,7 @@ public class GitMaterialTest {
         List<Modification> afterAdd = gitMaterial.modificationsSince(serverWorkingDir, new Modifications(beforeAdd).latestRevision(gitMaterial), new TestSubprocessExecutionContext());
 
         assertThat(afterAdd.size()).isEqualTo(1);
-        assertThat(afterAdd.get(0).getComment()).isEqualTo("Added submodule new-submodule");
+        assertThat(afterAdd.getFirst().getComment()).isEqualTo("Added submodule new-submodule");
     }
 
     @Test
@@ -522,7 +522,7 @@ public class GitMaterialTest {
         List<Modification> after = gitMaterial.modificationsSince(serverWorkingDir, new Modifications(beforeAdd).latestRevision(gitMaterial), new TestSubprocessExecutionContext());
 
         assertThat(after.size()).isEqualTo(1);
-        assertThat(after.get(0).getComment()).isEqualTo("Removed submodule sub1");
+        assertThat(after.getFirst().getComment()).isEqualTo("Removed submodule sub1");
     }
 
     @Test
@@ -707,7 +707,7 @@ public class GitMaterialTest {
             String password = "{{SECRET:[test][id]}}";
             gitMaterial.setPassword(password);
 
-            SecretParam secretParam = gitMaterial.getSecretParams().get(0);
+            SecretParam secretParam = gitMaterial.getSecretParams().getFirst();
             secretParam.setValue("p@ssw:rd");
 
             assertThat(gitMaterial.urlForCommandLine()).isEqualTo("http://bob%40example.com:p%40ssw:rd@exampele.com");
