@@ -108,7 +108,7 @@ public class ElasticProfileServiceIntegrationTest {
 
         assertThat(result.isSuccessful()).isTrue();
         assertThat(elasticProfileService.getPluginProfiles()).hasSize(1);
-        ElasticProfile created = elasticProfileService.getPluginProfiles().get(0);
+        ElasticProfile created = elasticProfileService.getPluginProfiles().getFirst();
         assertThat(created.getId()).isEqualTo(elasticProfileId);
         assertThat(created.getConfigWithErrorsAsMap()).isEqualTo(new HashMap<>());
     }
@@ -161,13 +161,13 @@ public class ElasticProfileServiceIntegrationTest {
         assertThat(elasticProfileService.getPluginProfiles()).hasSize(0);
         elasticProfileService.create(username, elasticProfile, result);
         assertThat(elasticProfileService.getPluginProfiles()).hasSize(1);
-        ElasticProfile existing = elasticProfileService.getPluginProfiles().get(0);
+        ElasticProfile existing = elasticProfileService.getPluginProfiles().getFirst();
 
         assertThat(existing.getConfigWithErrorsAsMap()).isEmpty();
         elasticProfileService.update(username, entityHashingService.hashForEntity(this.elasticProfile), newElasticProfile, result);
-        ElasticProfile updated = elasticProfileService.getPluginProfiles().get(0);
+        ElasticProfile updated = elasticProfileService.getPluginProfiles().getFirst();
         assertThat(updated.getId()).isEqualTo(elasticProfileId);
-        assertThat(updated.get(0)).isEqualTo(new ConfigurationProperty(new ConfigurationKey("key1"), new ConfigurationValue("value1")));
+        assertThat(updated.getFirst()).isEqualTo(new ConfigurationProperty(new ConfigurationKey("key1"), new ConfigurationValue("value1")));
     }
 
     @Test
@@ -178,9 +178,9 @@ public class ElasticProfileServiceIntegrationTest {
         elasticProfileService.create(username, elasticProfile, result);
         assertThat(elasticProfileService.getPluginProfiles()).hasSize(1);
 
-        assertThat(elasticProfileService.getPluginProfiles().get(0).getConfigWithErrorsAsMap()).isEmpty();
+        assertThat(elasticProfileService.getPluginProfiles().getFirst().getConfigWithErrorsAsMap()).isEmpty();
         elasticProfileService.update(username, "md5", newElasticProfile, result);
-        assertThat(elasticProfileService.getPluginProfiles().get(0).getConfigWithErrorsAsMap()).isEmpty();
+        assertThat(elasticProfileService.getPluginProfiles().getFirst().getConfigWithErrorsAsMap()).isEmpty();
 
         assertThat(result.isSuccessful()).isFalse();
         assertThat(result.message()).isEqualTo("Someone has modified the configuration for elastic agent profile with id 'id'. Please update your copy of the config with the changes.");
