@@ -113,8 +113,8 @@ public class EntityHashingServiceTest {
             final PluginSettings p2 = pluginSettings(id, key, secret);
 
             assertNotEquals(
-                p1.getPluginSettingsProperties().get(0).getEncryptedValue(),
-                p2.getPluginSettingsProperties().get(0).getEncryptedValue(),
+                p1.getPluginSettingsProperties().getFirst().getEncryptedValue(),
+                p2.getPluginSettingsProperties().getFirst().getEncryptedValue(),
                 "both entities should have different cipherTexts even though the input values are equal"
             );
 
